[package]
name = "imageshelter-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.151"
toml = "0.5.10"
rand = "0.8.5"
once_cell = "1.5.2"
aes-gcm = "0.10.1"